<resources>
    <string name="app_name">Material Cleaner</string>
    <string name="delimiter">,\ </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="new_version">Material Cleaner %s is released</string>
    <string name="manual_tools">Manual Tools</string>
    <string name="application_data">Application Data</string>
    <string name="cache">Cache Files</string>
    <string name="temp">Temp Files</string>
    <string name="log">Log Files</string>
    <string name="nonpublic">Nonpublic Directories</string>
    <string name="apk">Apks</string>
    <string name="small">Small Files</string>
    <string name="empty">Empty Directories</string>
    <string name="loading">Loading…</string>
    <string name="network_connection_failed">Network connection failed</string>
    <string name="rationale_shouldShowRationale">%s requires write external storage permission.</string>
    <string name="rationale_permanentlyDenied">%s requires write external storage permission.
        Please grant it manually in app info.</string>
    <string name="rationale_external_storage_manager">%s requires all files access permission.
        Please grant it in the next page.</string>
    <string name="settings">Settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_copy">Copy</string>
    <string name="email">Email</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="qq_channel">QQ Channel</string>
    <string name="view">View</string>
    <string name="menu_sort_by_name_title">App name</string>
    <string name="menu_sort_by_update_time_title">Update time</string>
    <string name="menu_rule_count">Ruled apps first</string>
    <string name="menu_mount_state">Mount state</string>
    <string name="menu_hide_title">Hide</string>
    <string name="menu_hide_system_app_title">System apps</string>
    <string name="menu_hide_disabled_app_title">Disabled apps</string>
    <string name="menu_hide_no_storage_permissions_title">No storage permissions apps</string>
    <string name="menu_hide_pick_apps">Pick apps</string>
    <string name="menu_batch_operation">Batch ops</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_invert_selection">Invert selection</string>
    <string name="menu_unselect_all">Unselect all</string>
    <string name="menu_hide_app_specific_storage">App-specific storage</string>
    <string name="refresh">Refresh</string>
    <string name="logcat">Grab logs</string>
    <string name="menu_add_to_hide_list">Add to hide list</string>
    <string name="delete">Delete</string>
    <string name="delete_all_mount_rules">Delete all mount rules</string>
    <string name="delete_all_read_only">Delete all read only</string>
    <string name="save">Save</string>
    <string name="quit_without_save">Changes aren\'t saved yet, are you sure you want to quit?</string>
    <string name="undo">Undo</string>
    <string name="enable_features_header">ENABLE FEATURES</string>
    <string name="start_on_boot_key" translatable="false">start_on_boot</string>
    <string name="start_on_boot_title">Start Cleaner service on boot</string>
    <string name="start_on_boot_summary">Make sure the service works fine on your device before ticking.</string>
    <string name="post_notification_key" translatable="false">post_notification</string>
    <string name="post_notification_title">Receive update notifications</string>
    <string name="nonpublic_key" translatable="false">nonpublic</string>
    <string name="nonpublic_title" translatable="false">@string/nonpublic</string>
    <string name="nonpublic_summary">Mainly used to clean up files leaked from storage redirect.
        It is not recommended to enable it if you are not using storage redirect.</string>
    <string name="apk_key" translatable="false">apk</string>
    <string name="small_key" translatable="false">small</string>
    <string name="empty_key" translatable="false">empty</string>
    <string name="empty_title" translatable="false">@string/empty</string>
    <string name="no_tick_key" translatable="false">no_tick</string>
    <string name="no_tick_title">No tick</string>
    <string name="no_tick_summary">Please enter a regular expression.
        The matched path will not tick by default.</string>
    <string name="no_scan_key" translatable="false">no_scan</string>
    <string name="no_scan_title">No scan</string>
    <string name="length_key" translatable="false">length</string>
    <string name="length_title">Show file(directory) size</string>
    <string name="length_summary">Turning off can speed up scanning, but file size is a good
        reference for determining whether it can be safely deleted.
        You need to weigh the pros and cons yourself.</string>
    <string name="sort_key" translatable="false">sort</string>
    <string name="sort_title">Sort by</string>
    <string name="monitor_key" translatable="false">monitor</string>
    <string name="monitor_title">Automatic rescan</string>
    <string name="monitor_summary">Use inotify to monitor the shared storage, and perform incremental
        scanning when the file changes. Invalid when watching more than 8192 files.</string>
    <string name="maximize_key" translatable="false">maximize</string>
    <string name="maximize_title">Maximal number of scan result</string>
    <string name="maximize_summary">Prevent OutOfMemoryError</string>
    <string name="confirm_delete_key" translatable="false">confirm_delete</string>
    <string name="confirm_delete_title">Show a dialog to confirm deletion</string>
    <string name="scan_system_app_key" translatable="false">scan_system_app</string>
    <string name="language_header">LANGUAGE</string>
    <string name="language_key" translatable="false">language</string>
    <string name="language_title">Language</string>
    <string name="theme_header">THEME</string>
    <string name="theme_color_key" translatable="false">theme_color</string>
    <string name="theme_color_title">Theme Color</string>
    <string name="theme_color_summary">The most common color in the app</string>
    <string name="theme_m3_key" translatable="false">theme_m3</string>
    <string name="theme_m3_title">Material 3</string>
    <string name="dark_theme_key" translatable="false">dark_theme</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="dark_theme_off">Always off</string>
    <string name="dark_theme_on">Always on</string>
    <string name="follow_system">Follow system</string>
    <string name="black_dark_theme_key" translatable="false">black_dark_theme</string>
    <string name="black_dark_theme_title">Black dark theme</string>
    <string name="require_zygisk_module">This feature requires the installation of the Zygisk module and the activation of Material Cleaner in LSPosed.</string>
    <string name="cleanup_title">CLEANUP</string>
    <string name="automatic_cleanup_key" translatable="false">automatic_cleanup</string>
    <string name="automatic_cleanup_title">Automatic cleanup</string>
    <string name="enable_relatime_title">(Experimental) Enable relative access time</string>
    <string name="enable_relatime_summary">Enable the file system\'s relative access time feature,
        which can help cleanup apps maximize the filtering of deletable files,
        while also avoiding the deletion of frequently used files.
        However, this will slightly reduce the file system\'s performance.</string>
    <string name="open_wizard_by_default_key" translatable="false">open_wizard_by_default</string>
    <string name="open_wizard_by_default_title">Open wizard by default</string>
    <string name="share_key" translatable="false">share</string>
    <string name="share_title">Share</string>
    <string name="import_key" translatable="false">import</string>
    <string name="import_title">Import</string>
    <string name="edit_mount_rules_template_key" translatable="false">edit_mount_rules_template</string>
    <string name="edit_mount_rules_template_title">Edit mount rules template</string>
    <string name="apply_mount_rules_template_to_key">apply_mount_rules_template_to</string>
    <string name="apply_mount_rules_template_to_title">Apply mount rules template to…</string>
    <string name="edit_read_only_template_key" translatable="false">edit_read_only_template</string>
    <string name="edit_read_only_template_title">Edit read only template</string>
    <string name="apply_read_only_template_to_key">apply_read_only_template_to</string>
    <string name="add_read_only_template">Add the read-only template to this app</string>
    <string name="apply_read_only_template_to_title">Apply read only template to…</string>
    <string name="apply_template_on_package_added_key" translatable="false">apply_template_on_package_added</string>
    <string name="apply_template_on_package_added_title">Apply mount rules template to new package automatically</string>
    <string name="applied_template_to_package">Applied template to %s</string>
    <string name="aggressively_prompt_for_reading_media_files_title">Aggressively prompt for reading media files</string>
    <string name="aggressively_prompt_for_reading_media_files_summary">Many unnecessary prompts will appear, but if you are unfamiliar with the storage redirect feature, enabling it can help reduce unintended problems.</string>
    <string name="auto_logging_title">Automatically grab the boot/shutdown log and automatically rescue the soft bricks</string>
    <string name="auto_logging_summary">Automatically disable the Zygisk module when storage volumes mount fails.</string>
    <string name="apps_type_marks_key" translatable="false">apps_type_marks</string>
    <string name="apps_type_marks_default" translatable="false">https://raw.githubusercontent.com/MaterialCleaner/AppsTypeMarks/main/</string>
    <string name="apps_type_marks_title">Online Apps Type Marks</string>
    <string name="apps_type_marks_summary">Provide the basis for \"Autocomplete wizard according to file system record\" and \"Apply mount rules template to new package automatically\".</string>
    <string name="apps_type_marks_repo_header">Online repository</string>
    <string name="apps_type_marks_repo_key" translatable="false">apps_type_marks_repo</string>
    <string name="apps_type_marks_repo_title">Repository address</string>
    <string name="apps_type_marks_repo_summary">Request URL is the address you set + application package name + .yml</string>
    <string name="apps_type_marks_refresh_key" translatable="false">apps_type_marks_refresh</string>
    <string name="apps_type_marks_refresh_title">Refresh cache</string>
    <string name="upload_apps_type_marks_key" translatable="false">upload_apps_type_marks</string>
    <string name="upload_apps_type_marks_title">Upload apps type marks to online repo</string>
    <string name="upload_apps_type_marks_hint">%s is marked as %s app.\nMarked directories are:\n%s</string>
    <string name="apps_type_marks_repo_correct_errors_key" translatable="false">correct_errors</string>
    <string name="apps_type_marks_repo_correct_errors_title">Correct errors</string>
    <string name="apps_type_marks_repo_correct_errors_summary">This action cannot be performed in the app. You need to fork the repository, then edit the markup files to fix issues, and finally pull requests. Click to open the repository.</string>
    <string name="auto_complete_by_record_merge_key" translatable="false">auto_complete_by_record_merge</string>
    <string name="auto_complete_by_record_merge_title">Complete by merging</string>
    <string name="auto_complete_by_record_respect_key" translatable="false">auto_complete_by_record_respect</string>
    <string name="auto_complete_by_record_respect_title">Respect online repository</string>
</resources>