<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/abc_dialog_title_divider_material">

    <EditText
        android:id="@+id/filterEdit"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeightSmall"
        android:background="@null"
        android:drawableStart="@drawable/ic_outline_filter_list_24"
        android:drawablePadding="24dp"
        android:hint="@android:string/search_go"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="?dialogPreferredPadding"
        android:paddingEnd="?dialogPreferredPadding"
        android:textAppearance="?textAppearanceListItem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingHorizontal="?dialogPreferredPadding"
        android:paddingTop="4dp"
        android:paddingBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_select_all"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_select_all"
            android:textAppearance="?textAppearanceLabelMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_invert_selection"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/menu_invert_selection"
            android:textAppearance="?textAppearanceLabelMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_unselect_all"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/menu_unselect_all"
            android:textAppearance="?textAppearanceLabelMedium" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="?listPreferredItemHeight">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <include
            android:id="@+id/list_container"
            layout="@layout/list_dialog" />
    </FrameLayout>
</LinearLayout>
